[gd_scene load_steps=9 format=3 uid="uid://bpbi1i3ybtr0j"]

[ext_resource type="FontFile" uid="uid://1j2o4rx4vxgu" path="res://Assets/Fonts/1408_TheEnd.ttf" id="1_3b3wr"]
[ext_resource type="Script" path="res://Scripts/loading_screen.gd" id="1_oek30"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h1o6b"]
bg_color = Color(0.0235294, 0.0235294, 0.0235294, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b7nky"]
corner_radius_top_left = 117
corner_radius_top_right = 117
corner_radius_bottom_right = 117
corner_radius_bottom_left = 117
corner_detail = 20
anti_aliasing_size = 1.876

[sub_resource type="ViewportTexture" id="ViewportTexture_ys8l8"]
viewport_path = NodePath("BG/LoadingPanel/NoiseLoading/SubViewport")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_o0upq"]
seed = 85600
frequency = 0.1639

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_qlj0i"]
width = 468
height = 468
noise = SubResource("FastNoiseLite_o0upq")

[sub_resource type="GDScript" id="GDScript_b237e"]
script/source = "@tool
extends Sprite2D


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta):
	((texture as NoiseTexture2D).noise as FastNoiseLite).seed += 1
"

[node name="LoadingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oek30")

[node name="BG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h1o6b")

[node name="LoadingPanel" type="Panel" parent="BG"]
clip_children = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -326.0
offset_top = -326.0
offset_right = -92.0
offset_bottom = -92.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_b7nky")

[node name="patience_w" type="Label" parent="BG/LoadingPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_3b3wr")
theme_override_font_sizes/font_size = 48
text = "PATIENCE
IS
VIRTUE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NoiseLoading" type="TextureProgressBar" parent="BG/LoadingPanel"]
clip_children = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.01
fill_mode = 4
texture_progress = SubResource("ViewportTexture_ys8l8")

[node name="SubViewport" type="SubViewport" parent="BG/LoadingPanel/NoiseLoading"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(234, 234)
render_target_update_mode = 3

[node name="NoiseSprite" type="Sprite2D" parent="BG/LoadingPanel/NoiseLoading/SubViewport"]
texture = SubResource("NoiseTexture2D_qlj0i")
script = SubResource("GDScript_b237e")

[node name="patience_b" type="Label" parent="BG/LoadingPanel/NoiseLoading/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_3b3wr")
theme_override_font_sizes/font_size = 48
text = "PATIENCE
IS
VIRTUE"
horizontal_alignment = 1
vertical_alignment = 1
